Change button colour, and align with 'correct' match colour

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -7,8 +7,8 @@ $match-color-hover: #3dcde624;
 $match-gray: #999999;
 $match-debug-color-dirty: #f7a85e66;
 $match-debug-color-inflight: #31a72085;
-$match-suggestion-background-color: #138ad2;
-$match-suggestion-background-color-hover: #106ea8;
+$match-suggestion-background-color: #45ad39;
+$match-suggestion-background-color-hover: #3a9430;
 $match-suggestion-color: #fff;
 $match-suggestion-color-hover: #fff;
 $match-suggestion-wiki-extract-height: 85px;
